--- a/source/_docs/port-2222.md
+++ b/source/_docs/port-2222.md
@@ -1,6 +1,6 @@
 ---
 title: Port 2222 Blocked Workaround
-description: Instructions for accessing Port 2222 using and SSH tunnel on your Pantheon site.
+description: Instructions for accessing Port 2222 using and SSH tunnel on your Pantheon Drupal or WordPress site.
 categories: [developing]
 tags: [code, debug, local]
 keywords: port 2222, ssh tunnel, port, port numbers
