Fix container rows, switch taining and guide lists, design tweaks

--- a/source/_changelogs/2015-08-01-August.md
+++ b/source/_changelogs/2015-08-01-August.md
@@ -1,5 +1,6 @@
 ---
 title: August 2015
+changelog: true
 ---
 ##Platform Improvements
 **PHP 5.5 opcache revalidate-freq Value is Now Set to Zero**   
