--- a/source/_changelogs/2016-04-01-April.md
+++ b/source/_changelogs/2016-04-01-April.md
@@ -1,5 +1,6 @@
 ---
 title: April 2016
+changelog: true
 ---
 
 ## Platform Improvements
@@ -8,7 +9,7 @@ title: April 2016
 We changed the name of the tab to reduce ambiguity.  
 
 **Documentation Site Updates**    
-We improved navigation on the [docs site](https://pantheon.io/docs/) by removing the drop-down options from the sub-navigation menu, and added links to the home page to view all tags, all categories, and all docs. 
+We improved navigation on the [docs site](https://pantheon.io/docs/) by removing the drop-down options from the sub-navigation menu, and added links to the home page to view all tags, all categories, and all docs.
 
 **New Terminus Plugins for Quicksilver Integrations**  
 [Terminus Quicksilver Plugin](https://github.com/pantheon-systems/terminus-quicksilver-plugin): Helps you with the initial Quicksilver/Pantheon YAML setup  
