--- a/source/_changelogs/2016-06-01-June.md
+++ b/source/_changelogs/2016-06-01-June.md
@@ -1,5 +1,6 @@
 ---
 title: June 2016
+changelog: true
 ---
 
 ## Platform Improvements
@@ -14,4 +15,4 @@ Previously, existing Drupal 8 sites had to be manually imported to Pantheon. Now
 Your User Dashboard now shows a screenshot of each site’s Dev environment and uses a default image if no screenshot is available. An update is triggered when clearing caches, deploying code, and cloning or importing database or files to Dev.
 
 **New Migration Button on the Dashboard**  
-We added a **Migrate Existing Site** button to the User and Organization Dashboards to help guide you through the import process. 
+We added a **Migrate Existing Site** button to the User and Organization Dashboards to help guide you through the import process.
