--- a/source/_changelogs/2016-08-01-August.md
+++ b/source/_changelogs/2016-08-01-August.md
@@ -1,11 +1,12 @@
 ---
 title: August 2016
+changelog: true
 ---
 ##Platform Improvements
 
 **Advanced Site Configurations Available**  
 Nested docroot: Serve sites from a `web` subdirectory, one-level beneath the root of your code repository. Among other use cases, this helps facilitate managing dependencies via Composer.
-Protected Web Paths: Specify files or directories that you don’t want to be publicly web-accessible. 
+Protected Web Paths: Specify files or directories that you don’t want to be publicly web-accessible.
 PHP Version: Now your site’s PHP version is managed via [pantheon.yml](https://pantheon.io/docs/pantheon-yml/) so it’s in version control and deployed along with the rest of your code.
 
 **New Hooks for Quicksilver Platform Integration**  
@@ -15,7 +16,7 @@ You can now automatically trigger a script after creating a site or Multidev. Ch
 We now support PHP 5.6 and 7.0. See our documentation to learn how to [upgrade your PHP version](https://pantheon.io/docs/php-versions/).
 
 **Docs Site Updated**  
-We redesigned the [Docs home page](https://pantheon.io/docs/). Check it out and let us know what you think! 
+We redesigned the [Docs home page](https://pantheon.io/docs/). Check it out and let us know what you think!
 
 **Solr Power for WordPress 0.5 Update**  
 We released an update for the [Solr Power WordPress plugin](https://wordpress.org/plugins/solr-power/) which adds a Solr search widget that supports faceting. If you have any input please open an issue on the [Github repo](https://github.com/pantheon-systems/solr-power).
