--- a/source/_changelogs/2016-02-01-February.md
+++ b/source/_changelogs/2016-02-01-February.md
@@ -1,11 +1,12 @@
 ---
 title: February 2016
+changelog: true
 ---
 
 ## Platform Improvements
 
 **Cloud Integration Tools**  
-We released a [suite of tools](https://pantheon.io/blog/move-stack-cloud-integration-tools-drupal-and-wordpress-developers) comprised of Quicksilver Platform Hooks, a new release of our Terminus command-line interface, a new YAML-based project configuration interface, and broad compatibility with SAML for centralized authentication. 
+We released a [suite of tools](https://pantheon.io/blog/move-stack-cloud-integration-tools-drupal-and-wordpress-developers) comprised of Quicksilver Platform Hooks, a new release of our Terminus command-line interface, a new YAML-based project configuration interface, and broad compatibility with SAML for centralized authentication.
 
 **WordPress at Scale**    
 For the past several months we’ve been collecting best practices and resources, and put together [a microsite](https://www.scalewp.io/) to help anyone thinking about scale. The content of the site is a community effort [managed via GitHub](https://github.com/pantheon-systems/wordpress-at-scale)  (pull requests welcome!). See Josh Koenig's [blog post](https://pantheon.io/blog/introducing-wordpress-scale) for more information.
@@ -14,7 +15,7 @@ For the past several months we’ve been collecting best practices and resources
 Code archives created using the Backups tool on the Test and Live environments now reflect the state of the codebase for the most recent deploy on the environment. You’ll no longer have to search for tags when restoring codebase.
 
 **WordPress Core Updates**    
-We are no longer updating Akismet and other non-core WordPress plugins and themes. We are now only doing in-place core updates. 
+We are no longer updating Akismet and other non-core WordPress plugins and themes. We are now only doing in-place core updates.
 
 **Platform Domains**  
 Platform domains (e.g. dev-site.pantheon.io) are now created for all sites, even if the site is part of an organization that has a custom domain. Previously, a site would start with `dev-site.yoursite.io`, it now starts with both `dev-site.yoursite.io` and `dev-site.pantheon.io`.
@@ -23,7 +24,7 @@ Platform domains (e.g. dev-site.pantheon.io) are now created for all sites, even
 On February 24th 2016, [Drupal 6](https://www.drupal.org/drupal-6-eol) will no longer be supported by the Drupal community. Read more about it in Drew Gorton’s [blog post](https://pantheon.io/blog/thank-you-drupal-6).
 
 **Terminus 0.10.2 Released**  
-If you haven't updated in a while, check out the [Terminus Changelog](https://github.com/pantheon-systems/cli/blob/master/CHANGELOG.md) and get the [latest version](https://github.com/pantheon-systems/cli/releases). 
+If you haven't updated in a while, check out the [Terminus Changelog](https://github.com/pantheon-systems/cli/blob/master/CHANGELOG.md) and get the [latest version](https://github.com/pantheon-systems/cli/releases).
 
 ## Documentation
 #### New Articles
