Rename header for Dirty COW

--- a/source/_changelogs/2016-11-01-November.md
+++ b/source/_changelogs/2016-11-01-November.md
@@ -14,7 +14,7 @@ For sites wanting fine-grained control over how their responses are represented 
 At Pantheon, we are committed to helping our customers operate their Drupal 6 sites for as long as they are needed. We have selected two Long Term Support (LTS) partners to assist customers seeking to move their Drupal 6 sites to Pantheon. Read more about it in Lauren Kelly's [blog post](https://pantheon.io/blog/drupal-6-long-term-support-and-migration-partnerships).
 
 
-####Fedora Upgrade
+####Platform Security Update
 Mitigated the [Dirty COW (CVE-2016-5195)](https://dirtycow.ninja/) Linux kernel privilege escalation vulnerability.
 
 
