Copy edits, change all CloudFlare -> Cloudflare

--- a/source/_changelogs/2016-04-01-April.md
+++ b/source/_changelogs/2016-04-01-April.md
@@ -23,7 +23,7 @@ If you haven't updated in a while, check out the [Terminus Changelog](https://gi
 ### New Articles
 
 [Configuring Environment Indicators](/docs/environment-indicator/)  
-[Enabling Mobile Redirection with CloudFlare](/docs/mobile-redirection/)  
+[Enabling Mobile Redirection with Cloudflare](/docs/mobile-redirection/)  
 [Exporting Sites From GoDaddy with cPanel](/docs/migrate-cpanel/)  
 [Managing Custom Code for WordPress with Plugins](/docs/wordpress-custom-code/)    
 [Managing Custom Code with Composer](/docs/composer/)  
