--- a/source/_changelogs/2015-06-01-June.md
+++ b/source/_changelogs/2015-06-01-June.md
@@ -24,7 +24,7 @@ Seeing intermittently slow performance? Check your [slow query log](/docs/mysql-
 
 ####New Articles/Guides
 
-[Adding HTTPS For Free With CloudFlare](/docs/guides/cloudflare-enable-https/)
+[Adding HTTPS For Free With Cloudflare](/docs/guides/cloudflare-enable-https/)
 [Configuring SAML SSO for Pantheon with Okta](/docs/sso/)  
 [Debugging Connectivity Issues](/docs/debug-connections/)  
 [Getting Support](/docs/getting-support/)  
