--- a/source/_changelogs/2016-07-01-July.md
+++ b/source/_changelogs/2016-07-01-July.md
@@ -8,7 +8,7 @@ changelog: true
 As of July 28, now when you choose **Migrate Existing Site** and select WordPress, you’ll be guided to install the Pantheon Migrations plugin, so you can get your migration going with just a few clicks. [Learn more](https://pantheon.io/docs/migrate-wordpress/).
 
 **TLS 1.0 Deprecated**  
-In keeping with the recommendations of PCI DSS, we no longer support TLS 1.0 for customer sites. [Older browsers and mobile devices](https://en.wikipedia.org/wiki/Transport_Layer_Security#Web_browsers) that do not support TLS 1.1 and 1.2 will likely experience problems and security vulnerabilities. If you need to continue support for TLS 1.0, you can do so with [CloudFlare](https://pantheon.io/docs/cloudflare/). For details, see[ CloudFlare's documentation](https://support.cloudflare.com/hc/en-us/articles/205043158-PCI-3-1-and-TLS-1-2).
+In keeping with the recommendations of PCI DSS, we no longer support TLS 1.0 for customer sites. [Older browsers and mobile devices](https://en.wikipedia.org/wiki/Transport_Layer_Security#Web_browsers) that do not support TLS 1.1 and 1.2 will likely experience problems and security vulnerabilities. If you need to continue support for TLS 1.0, you can do so with [Cloudflare](https://pantheon.io/docs/cloudflare/). For details, see[ Cloudflare's documentation](https://support.cloudflare.com/hc/en-us/articles/205043158-PCI-3-1-and-TLS-1-2).
 
 **Drupal Contrib Module Security Updates**  
 There were multiple releases of Drupal contributed modules that fix highly critical remote code execution vulnerabilities. The Drupal Security Team urges you to update the modules immediately. See [more information on Drupal.org](https://www.drupal.org/psa-2016-001).
