Github -> GitHub throughout

--- a/source/_changelogs/2015-02-01-February.md
+++ b/source/_changelogs/2015-02-01-February.md
@@ -6,13 +6,13 @@ changelog: true
 ##Platform Improvements
 
 **Terminus 0.5 Released**
-A new release of Terminus, v 0.5 is now available. The project also converted to [Semantic Versioning](http://semver.org). Read more about the update on [Github](https://github.com/pantheon-systems/cli/releases).
+A new release of Terminus, v 0.5 is now available. The project also converted to [Semantic Versioning](http://semver.org). Read more about the update on [GitHub](https://github.com/pantheon-systems/cli/releases).
 
 **Varnish Testing Harness**
 Internally, we built a completely new testing harness for Varnish. More details to come.
 
 **Try Drupal 8 Beta**
-[Drupal 8 Beta 7](https://dashboard.pantheon.io/products/drupal8/spinup) is available for free on Pantheon. You can check out our [issue tracker on Github](https://github.com/pantheon-systems/drops-8/issues), and read more on [Drupal.org](https://www.drupal.org/node/2437851).
+[Drupal 8 Beta 7](https://dashboard.pantheon.io/products/drupal8/spinup) is available for free on Pantheon. You can check out our [issue tracker on GitHub](https://github.com/pantheon-systems/drops-8/issues), and read more on [Drupal.org](https://www.drupal.org/node/2437851).
 
 **New WordPress Upstream**  
 WordPress released patch version 4.1.1. It is available in all WordPress site Dashboards. Read more at [WordPress.org](https://wordpress.org/news/2015/02/wordpress-4-1-1).
