--- a/source/_changelogs/2015-08-01-August.md
+++ b/source/_changelogs/2015-08-01-August.md
@@ -10,7 +10,7 @@ Previously, for sites on PHP 5.5 (WordPress sites default, Drupal sites can [upg
 The arg separator is used in PHP generated URLs to separate arguments. For PHP 5.5, we changed the default PHP arg separator from `&amp;` to `&`. To use the old arg separator, modify [settings.php](/docs/settings-php/#troubleshooting) or [wp-config.php](/docs/wp-config-php/#troubleshooting).
 
 **Terminus CLI Version 0.7.1**    
-Get the [latest version](https://github.com/pantheon-systems/cli/releases/). We’re steaming ahead to a 1.0 release and can use your help over on Github.
+Get the [latest version](https://github.com/pantheon-systems/cli/releases/). We’re steaming ahead to a 1.0 release and can use your help over on GitHub.
 
 **Saint Mode Saves your Images**     
 If there’s an outage or hardware issue with the Pantheon File System, “Saint Mode” now kicks in to serve your images, CSS, and JavaScript files.
