--- a/source/_changelogs/2015-10-01-October.md
+++ b/source/_changelogs/2015-10-01-October.md
@@ -9,7 +9,7 @@ changelog: true
 You can now take your [Drupal 8](https://pantheon.io/blog/drupal-8-support-pantheon) sites live on Pantheon. [Create your Drupal 8](https://pantheon.io/d8) site today.
 
 **Terminus 0.9.2 Released**  
-Get the [latest version](https://github.com/pantheon-systems/cli/releases). We're steaming ahead to a 1.0 release and can use your help on Github. Manage workflow, WP CLI, and Drush from one CLI tool.
+Get the [latest version](https://github.com/pantheon-systems/cli/releases). We're steaming ahead to a 1.0 release and can use your help on GitHub. Manage workflow, WP CLI, and Drush from one CLI tool.
 
 **wp-cli search-replace**    
 We improved Pantheon's use of `wp-cli search-replace` on clone/deploy operations and now replace strings in all database tables. Previously, we only replaced strings in tables registered with the $wpdb object. In most cases this was core WordPress tables only, since most plugin authors don't register tables they create with the $wpdb object.
