--- a/source/_changelogs/2016-01-01-January.md
+++ b/source/_changelogs/2016-01-01-January.md
@@ -13,7 +13,7 @@ We released the [Pantheon HUD plugin](https://wordpress.org/plugins/pantheon-hud
 - Remind you what environment you're in and let you jump to the others  
 - Show some status data about the environment  
 - Give you a copy/paste Terminus WP-CLI command starter    
-A big thanks to Daniel Bachhuber (of WP-CLI fame) for putting this together. Development is taking place on [Github](https://github.com/pantheon-systems/pantheon-hud/), and as always your pull requests and issues with feature ideas are welcome!
+A big thanks to Daniel Bachhuber (of WP-CLI fame) for putting this together. Development is taking place on [GitHub](https://github.com/pantheon-systems/pantheon-hud/), and as always your pull requests and issues with feature ideas are welcome!
 
 **Quicksilver Platform Hooks Are Now Available**  
 * Quicksilver opens up our platform and allows deeper integration and automation by adding hooks for encoding reactions to specific platform workflows. Common uses so far include:
