--- a/source/_changelogs/2016-10-01-October.md
+++ b/source/_changelogs/2016-10-01-October.md
@@ -13,7 +13,7 @@ You can now add custom domain names to your Multidev environments. Among other u
 
 
 ####Solr Power for WordPress 0.6 Update
-We released an update for the [Solr Power WordPress plugin](https://wordpress.org/plugins/solr-power/) that adds advanced WP_Query integration and a method for API status. To contribute or offer input, please open an issue or pull request on the [Github repo](https://github.com/pantheon-systems/solr-power).
+We released an update for the [Solr Power WordPress plugin](https://wordpress.org/plugins/solr-power/) that adds advanced WP_Query integration and a method for API status. To contribute or offer input, please open an issue or pull request on the [GitHub repo](https://github.com/pantheon-systems/solr-power).
 
 ## Documentation
 
