--- a/source/_changelogs/2015-04-01-April.md
+++ b/source/_changelogs/2015-04-01-April.md
@@ -36,6 +36,6 @@ Learn how to use a quick PHP script to [Convert MySQL tables from MyISAM to Inno
 Want the security of SSL on your Pantheon site but the budget won't allow it? Check out [our new doc](/docs/guides/cloudflare-enable-https/) to learn how to set up and use Cloudflare SSL for free for on your WordPress site.
 
 ####New Guides
-Our [new guide](/docs/guides/collaborative-development/) will show you how to get up and running using a Github account to collaborate with your team. Learn how to synchronize your existing Pantheon site to Github, create repositories, synchronize existing Github repositories with Pantheon, and develop collaboratively by using branching and pull requests.
+Our [new guide](/docs/guides/collaborative-development/) will show you how to get up and running using a GitHub account to collaborate with your team. Learn how to synchronize your existing Pantheon site to GitHub, create repositories, synchronize existing GitHub repositories with Pantheon, and develop collaboratively by using branching and pull requests.
 
 Two-factor authentication (TFA) is a security practice that prevents attackers from compromising accounts by requiring an extra authentication method beyond only using a password to log in.  Our [new guide](/docs/guides/two-factor-authentication/) will walk you through installing two-factor authentication on Drupal and WordPress, for both the single site and organization-wide cases.
