--- a/source/_changelogs/2015-07-01-July.md
+++ b/source/_changelogs/2015-07-01-July.md
@@ -14,7 +14,7 @@ The Multidev Dashboard now provides a progress bar after the environment creatio
 Greg Anderson created scripts and example repos to automate your builds using a composer-based workflow. Check out [CI scripts](https://github.com/pantheon-systems/circle-scripts), [Travis CI scripts](https://github.com/pantheon-systems/travis-scripts), and [this exciting pull request](https://github.com/pantheon-systems/drops-7/pull/65) in our Drops-7 repository.
 
 **Kalabox 2 <3 Pantheon**    
-Kalabox 2 now supports quickly pulling and pushing apps between Pantheon and your local Kalabox. [Read how at Github](https://github.com/kalabox/kalabox/wiki/Pantheon-Guide).
+Kalabox 2 now supports quickly pulling and pushing apps between Pantheon and your local Kalabox. [Read how at GitHub](https://github.com/kalabox/kalabox/wiki/Pantheon-Guide).
 
 
 ##Documentation
