--- a/source/_changelogs/2016-08-01-August.md
+++ b/source/_changelogs/2016-08-01-August.md
@@ -19,7 +19,7 @@ We now support PHP 5.6 and 7.0. See our documentation to learn how to [upgrade y
 We redesigned the [Docs home page](https://pantheon.io/docs/). Check it out and let us know what you think!
 
 **Solr Power for WordPress 0.5 Update**  
-We released an update for the [Solr Power WordPress plugin](https://wordpress.org/plugins/solr-power/) which adds a Solr search widget that supports faceting. If you have any input please open an issue on the [Github repo](https://github.com/pantheon-systems/solr-power).
+We released an update for the [Solr Power WordPress plugin](https://wordpress.org/plugins/solr-power/) which adds a Solr search widget that supports faceting. If you have any input please open an issue on the [GitHub repo](https://github.com/pantheon-systems/solr-power).
 
 **Terminus 0.12.0**  
 The latest release has huge performance improvements for users with lots of sites. Check out the [Terminus Changelog](https://github.com/pantheon-systems/cli/blob/master/CHANGELOG.md) to see what’s new and get the [latest version](https://github.com/pantheon-systems/cli/releases).
