Align headers throughout changelogs

--- a/source/_changelogs/2015-03-01-March.md
+++ b/source/_changelogs/2015-03-01-March.md
@@ -4,13 +4,13 @@ changelog: true
 ---
 ##Platform Improvements
 
-**Drupal 7.35 Update**  
+### Drupal 7.35 Update
 There was a Drupal update pushed to all Pantheon Dashboards to fix minor security issues. For more details see [Drupal 7.35 and Drupal 6.35 announcement](https://www.drupal.org/drupal-7.35).
 
-**Terminus Improvement**  
+### Terminus Improvement  
 You will now get an alert when there's a new version of Terminus available.
 
-**Dashboard Optimization**  
+### Dashboard Optimization
 - The People tab now shows gravatars for all users in an Organization  
 - Your framework (Drupal, WordPress) is displayed in the Site Dashboard header  
 - Users can now delete their own accounts in the Team tab  
@@ -18,7 +18,7 @@ You will now get an alert when there's a new version of Terminus available.
 
 
 ##Documentation
-####New Guides
+###New Guides
 
 Check out our new guide [Automated Testing for WordPress with Behat](/docs/guides/wordpress-automated-testing/) to learn how to set up Behat on your local machine and run automated tests against a remote WordPress site.
 
