--- a/source/_changelogs/2015-08-01-August.md
+++ b/source/_changelogs/2015-08-01-August.md
@@ -2,27 +2,27 @@
 title: August 2015
 changelog: true
 ---
-##Platform Improvements
-**PHP 5.5 opcache revalidate-freq Value is Now Set to Zero**   
+## Platform Improvements
+### PHP 5.5 opcache revalidate-freq Value is Now Set to Zero   
 Previously, for sites on PHP 5.5 (WordPress sites default, Drupal sites can [upgrade now](/docs/php-versions/)), code changes were only refreshed every 60 seconds, regardless of the environment. Now, Dev/Multidev environments on 5.5 will immediately see code changes, and Test/Live now refresh every 2 seconds.
 
-**PHP Default Arg Separator**    
+### PHP Default Arg Separator
 The arg separator is used in PHP generated URLs to separate arguments. For PHP 5.5, we changed the default PHP arg separator from `&amp;` to `&`. To use the old arg separator, modify [settings.php](/docs/settings-php/#troubleshooting) or [wp-config.php](/docs/wp-config-php/#troubleshooting).
 
-**Terminus CLI Version 0.7.1**    
+### Terminus CLI Version 0.7.1
 Get the [latest version](https://github.com/pantheon-systems/cli/releases/). We’re steaming ahead to a 1.0 release and can use your help over on GitHub.
 
-**Saint Mode Saves your Images**     
+### Saint Mode Saves your Images
 If there’s an outage or hardware issue with the Pantheon File System, “Saint Mode” now kicks in to serve your images, CSS, and JavaScript files.
 
-**nginx.conf Update for Photon**  
+### nginx.conf Update for Photon
 If you use [Jetpack’s Photon](http://jetpack.me/support/photon) tool, the Photon user agent can now access files on locked sites.
 
 
 
-##Documentation
+## Documentation
 
-####New Articles/Guides
+### New Articles
 [Dynamic Outgoing IP Addresses](/docs/outgoing-ips/)  
 [Export an Existing Drupal Site](/docs/drupal-export/)  
 [Export an Existing WordPress Site](/docs/wordpress-export/)  
