--- a/source/_changelogs/2015-06-01-June.md
+++ b/source/_changelogs/2015-06-01-June.md
@@ -4,25 +4,25 @@ changelog: true
 ---
 ##Platform Improvements
 
-####Single Sign-On (SSO) Release  
+### Single Sign-On (SSO) Release  
 We added two new features to help security conscious organizations work with our platform:
 
 [**SAML Login**](/docs/sso/): For organizations with SAML compatible single sign-on solutions, Pantheon allows authentication of users to the Dashboard via your own login system, giving you central administrative control over employee access to the platform.
 
 **Secure Runtime Access**: Pantheon protects all access to runtime resources including Drush, WP-CLI, or backing services like MySQL, behind the security of an encrypted [SSH tunnel](/docs/ssh-tunnels/). This mode requires developers first establish a secure channel between their workstation and the Pantheon platform for all communication.
 
-#### Improved Workflows Notifications
+### Improved Workflows Notifications
 We are now providing richer and more accurate information about the background actions the Pantheon platform is performing on your sites.  This includes commits, workflow actions and clear caches, including more details about the tasks that were performed.
 
-####WalkMe Tours
+### WalkMe Tours
 This week we added WalkMe.com’s guidance platform. You can now search the docs from within the Dashboard and take tours to learn how to use the Pantheon platform.
 
 
-##Documentation
+## Documentation
 
 Seeing intermittently slow performance? Check your [slow query log](/docs/mysql-slow-log/) and take action with [New Relic](/docs/debug-mysql-new-relic/).
 
-####New Articles/Guides
+### New Articles
 
 [Adding HTTPS For Free With Cloudflare](/docs/guides/cloudflare-enable-https/)
 [Configuring SAML SSO for Pantheon with Okta](/docs/sso/)  
