--- a/source/_changelogs/2016-03-01-March.md
+++ b/source/_changelogs/2016-03-01-March.md
@@ -5,18 +5,18 @@ changelog: true
 ##Platform Improvements
 
 
-**Freezing Inactive Sites**    
+### Freezing Inactive Sites  
 Sandbox sites that have not been used in six months will be frozen due to inactivity. But don’t worry--you can click **Unfreeze Site** on your Dashboard if you still need it.
 
-**Docs Site Changes**    
+### Docs Site Changes
 We updated the Docs landing page to show the five top docs in each category, added a Featured category to give you quick access to the most frequently used docs, and simplified the URLs. [Check it out](https://pantheon.io/docs/)!
 
-**Terminus 0.11.0 Released**  
+### Terminus 0.11.0 Released
 If you haven't updated in a while, check out the [Terminus Changelog](https://github.com/pantheon-systems/cli/blob/master/CHANGELOG.md) and get the [latest version](https://github.com/pantheon-systems/cli/releases).
 
 
-##Documentation
-####New Articles
+## Documentation
+## New Articles
 [Horizontal Scalability](https://pantheon.io/docs/horizontal-scalability/)  
 
 [Migrate to Pantheon: WordPress](https://pantheon.io/docs/migrate-wordpress/)  
