--- a/source/_changelogs/2016-08-01-August.md
+++ b/source/_changelogs/2016-08-01-August.md
@@ -4,30 +4,30 @@ changelog: true
 ---
 ##Platform Improvements
 
-**Advanced Site Configurations Available**  
+### Advanced Site Configurations Available
 Nested docroot: Serve sites from a `web` subdirectory, one-level beneath the root of your code repository. Among other use cases, this helps facilitate managing dependencies via Composer.
 Protected Web Paths: Specify files or directories that you don’t want to be publicly web-accessible.
 PHP Version: Now your site’s PHP version is managed via [pantheon.yml](https://pantheon.io/docs/pantheon-yml/) so it’s in version control and deployed along with the rest of your code.
 
-**New Hooks for Quicksilver Platform Integration**  
+### New Hooks for Quicksilver Platform Integration
 You can now automatically trigger a script after creating a site or Multidev. Check out slack_notifcation so all your team members know when a new Multidev or site is created. View all example [Quicksilver scripts](https://github.com/pantheon-systems/quicksilver-examples/) on GitHub.
 
-**PHP 5.6/7.0 Released**  
+### PHP 5.6/7.0 Released
 We now support PHP 5.6 and 7.0. See our documentation to learn how to [upgrade your PHP version](https://pantheon.io/docs/php-versions/).
 
-**Docs Site Updated**  
+### Docs Site Updated
 We redesigned the [Docs home page](https://pantheon.io/docs/). Check it out and let us know what you think!
 
-**Solr Power for WordPress 0.5 Update**  
+### Solr Power for WordPress 0.5 Update
 We released an update for the [Solr Power WordPress plugin](https://wordpress.org/plugins/solr-power/) which adds a Solr search widget that supports faceting. If you have any input please open an issue on the [GitHub repo](https://github.com/pantheon-systems/solr-power).
 
-**Terminus 0.12.0**  
+### Terminus 0.12.0
 The latest release has huge performance improvements for users with lots of sites. Check out the [Terminus Changelog](https://github.com/pantheon-systems/cli/blob/master/CHANGELOG.md) to see what’s new and get the [latest version](https://github.com/pantheon-systems/cli/releases).
 
 
 ## Documentation
 
-#### New Articles/Guides
+### New Articles/Guides
 
 [Migrate Sites to Pantheon: Troubleshooting](/docs/migrate-troubleshooting/)  
 [Migrating Sites to Pantheon: Preserve Existing Git History](/docs/migrate-preserve-history/)    
