--- a/source/_docs/port-2222.md
+++ b/source/_docs/port-2222.md
@@ -1,7 +1,7 @@
 ---
 title: Port 2222 Blocked Workaround
 description: Instructions for accessing Port 2222 using and SSH tunnel on your Pantheon Drupal or WordPress site.
-tags: [debugcode, localdev]
+tags: [debugcode]
 categories: []
 ---
 In order to push and pull code to your Pantheon site, you'll need access to port 2222. If for some reason this port isn't open to you, either because of a corporate firewall or router configuration, you'll get an error like the following:
