--- a/source/_changelogs/2016-08-01-August.md
+++ b/source/_changelogs/2016-08-01-August.md
@@ -32,5 +32,5 @@ The latest release has huge performance improvements for users with lots of site
 [Migrate Sites to Pantheon: Troubleshooting](/docs/migrate-troubleshooting/)  
 [Migrating Sites to Pantheon: Preserve Existing Git History](/docs/migrate-preserve-history/)    
 [Serving Sites from the Web Subdirectory](https://pantheon.io/docs/nested-docroot/)  
-[Using Lockr to Secure and Manage API and Encryption Keys with WordPress and Drupal](/docs/guides/lockr/)  
+[Using Lockr to Secure and Manage API and Encryption Keys](/docs/guides/lockr/)  
 [Using Priority Enterprise Support](/docs/priority-enterprise-support/)
