additional link replace/removes

--- a/source/_changelogs/2015-06-01-June.md
+++ b/source/_changelogs/2015-06-01-June.md
@@ -4,7 +4,7 @@ changelog: true
 ---
 ##Platform Improvements
 
-### Single Sign-On (SSO) Release  
+### Single Sign-On (SSO) Release
 We added two new features to help security conscious organizations work with our platform:
 
 [**SAML Login**](/docs/sso/): For organizations with SAML compatible single sign-on solutions, Pantheon allows authentication of users to the Dashboard via your own login system, giving you central administrative control over employee access to the platform.
@@ -25,10 +25,10 @@ Seeing intermittently slow performance? Check your [slow query log](/docs/mysql-
 ### New Articles
 
 [Adding HTTPS For Free With Cloudflare](/docs/guides/cloudflare-enable-https/)
-[Configuring SAML SSO for Pantheon with Okta](/docs/sso/)  
-[Debugging Connectivity Issues](/docs/debug-connections/)  
-[Getting Support](/docs/getting-support/)  
-[MIME Types](/docs/mime-types/)  
-[The Pantheon Deploy Log](/docs/deploys)  
+[Configuring SAML SSO for Pantheon with Okta](/docs/sso/)
+[Debugging Connectivity Issues](/docs/debug-connections/)
+[Getting Support](/docs/getting-support/)
+[MIME Types](/docs/mime-types/)
+[The Pantheon Deploy Log]()  
 [Unsupported Modules and Plugins](/docs/unsupported-modules-plugins/)
-[Using Wraith for Visual Regression Testing](/docs/guides/visual-diff-with-wraith/)  
+[Using Wraith for Visual Regression Testing](/docs/guides/visual-diff-with-wraith/)
