--- a/source/_changelogs/2015-10-01-October.md
+++ b/source/_changelogs/2015-10-01-October.md
@@ -20,10 +20,10 @@ All new Drupal 7 sites will automatically default to run on PHP 5.5.
 ### Organization Renaming
 You can now rename your own Organization by going to the Settings tab.
 
-### Terminus Commands Updated  
+### Terminus Commands Updated
 We fixed the errors with `drush sql-connect` and `sites aliases --print ` commands.
 
-### Edge Cache upgraded to Varnish 4  
+### Edge Cache upgraded to Varnish 4
 We upgraded upgraded Varnish 3 to Varnish 4. This allows us to keep up with operating system and security upgrades. This upgrade includes overall stabilization improvements and we expect 100% backward compatibility.
 
 
@@ -31,9 +31,9 @@ We upgraded upgraded Varnish 3 to Varnish 4. This allows us to keep up with oper
 
 ### New Docs
 
-[Configuration Workflow for Drupal 8 Sites](/docs/drupal-8-configuration-management/)    
-[Creating a services.yml File for Drupal 8](/docs/services-yml/)  
-[Drupal 8 on Pantheon](/docs/drupal-8/)  
-[Drupal 8 Performance Configuration](/docs/drupal-8-cache)  
-[Extracting Sites from a Drupal Multisite](/docs/unwind-multisite/)  
+[Configuration Workflow for Drupal 8 Sites](/docs/drupal-8-configuration-management/)
+[Creating a services.yml File for Drupal 8](/docs/services-yml/)
+[Drupal 8 on Pantheon]()  
+[Drupal 8 Performance Configuration](/docs/drupal-8-cache)
+[Extracting Sites from a Drupal Multisite](/docs/unwind-multisite/)
 [WordPress Pantheon Cache Plugin Configuration](/docs/wordpress-cache-plugin/)
