--- a/source/_changelogs/2015-06-01-June.md
+++ b/source/_changelogs/2015-06-01-June.md
@@ -29,6 +29,6 @@ Seeing intermittently slow performance? Check your [slow query log](/docs/mysql-
 [Debugging Connectivity Issues](/docs/debug-connections/)
 [Getting Support](/docs/getting-support/)
 [MIME Types](/docs/mime-types/)
-[The Pantheon Deploy Log]()  
+The Pantheon Deploy Log
 [Unsupported Modules and Plugins](/docs/unsupported-modules-plugins/)
 [Using Wraith for Visual Regression Testing](/docs/guides/visual-diff-with-wraith/)
