--- a/source/_changelogs/2017-04-01-April.md
+++ b/source/_changelogs/2017-04-01-April.md
@@ -22,3 +22,14 @@ In some cases, ssh operations to the platform would hang on connection if a user
 ### New Articles
 
 [Create a Drupal 8 Site From the Command Line Using Terminus and Drush](https://pantheon.io/docs/guides/drupal8-commandline/)
+
+[Using GitHub Pull Requests with Composer and Drupal 8](https://pantheon.io/docs/guides/github-pull-requests/)
+
+[Deploy to Pantheon from an External Repository using DeployBot](https://pantheon.io/docs/deploybot/)
+
+[Early Access: Free and Automated HTTPS](https://pantheon.io/docs/free-https/)
+
+[Require HTTPS with the HSTS Header](https://pantheon.io/docs/hsts/)
+
+[Pingdom Uptime Check](https://pantheon.io/docs/guides/pingdom-uptime-check/)
+
