--- a/source/_changelogs/2017-04-01-April.md
+++ b/source/_changelogs/2017-04-01-April.md
@@ -4,10 +4,10 @@ changelog: true
 ---
 ## Platform Improvements
 
-#### WordPress Upgrades
+### WordPress Upgrades
 [WordPress 4.7.4](https://codex.wordpress.org/Version_4.7.4) Has been [pushed](https://github.com/pantheon-systems/WordPress/pull/112) to all WordPress Site Dashboards.
 
-#### Drupal Core Upgrades
+### Drupal Core Upgrades
 [Drupal 8.3.1](https://www.drupal.org/project/drupal/releases/8.3.1) has been [pushed](https://github.com/pantheon-systems/drops-8/commit/bf3942e37ce2d9ce0d9646b3a538b03bc8076c01) to all Drupal Site Dashboards. This update contains security patches, and it’s strongly recommended
  that you upgrade immediately.
 
@@ -15,7 +15,7 @@ changelog: true
 
 If you haven’t updated in awhile, checkout the [Terminus Changelog](https://pantheon.io/docs/terminus/updates/#changelog) to see what’s new and update to the [current release](https://pantheon.io/docs/terminus/updates/#update-to-the-current-release-)
 
-#### Bug Fixes
+### Bug Fixes
 In some cases, ssh operations to the platform would hang on connection if a user has ed25519 ssh keys in their agent keychain. This bug has been fixed. Note that we still don’t support ed25519 keys.
 
 ## Documentation
