update status links

--- a/source/_changelogs/2016-12-01-December.md
+++ b/source/_changelogs/2016-12-01-December.md
@@ -20,7 +20,7 @@ WordPress 4.7 has been pushed to all Pantheon Dashboards. This update includes c
 
 
 ### WordPress 4.7 Security Patches
-Pantheon has released two security patches for Wordpress 4.7. For details, see [WordPress 4.7-p1 - CVE-2016-10033](http://status.pantheon.io/incidents/46rscpq4jk4j) and [WordPress 4.7-p2 - CVE-2016-10045](http://status.pantheon.io/incidents/hbxq7ht52jm0).
+Pantheon has released two security patches for Wordpress 4.7. For details, see [WordPress 4.7-p1 - CVE-2016-10033](https://status.pantheon.io/incidents/46rscpq4jk4j) and [WordPress 4.7-p2 - CVE-2016-10045](https://status.pantheon.io/incidents/hbxq7ht52jm0).
 
 ### Drupal Core Updates
 [Drupal 8.2.4](https://www.drupal.org/project/drupal/releases/8.2.4) and [Drupal 7.53](https://www.drupal.org/project/drupal/releases/7.53) releases have been pushed to all Pantheon Dashboards.
