Correct URLs based on SEO consult

--- a/source/_changelogs/2016-03-01-March.md
+++ b/source/_changelogs/2016-03-01-March.md
@@ -17,16 +17,16 @@ If you haven't updated in a while, check out the [Terminus Changelog](https://gi
 
 ## Documentation
 ## New Articles
-[Horizontal Scalability](https://pantheon.io/docs/horizontal-scalability/)  
+[Horizontal Scalability](/docs/horizontal-scalability/)  
 
-[Migrate to Pantheon: WordPress](https://pantheon.io/docs/migrate-wordpress/)  
+[Migrate to Pantheon: WordPress](/docs/migrate-wordpress/)  
 
-[Switching DNS from One Site to Another](https://pantheon.io/docs/migrate-wordpress/)  
+[Switching DNS from One Site to Another](/docs/migrate-wordpress/)  
 
-[Temporary File Management with Multiple Application Containers](https://pantheon.io/docs/temp-files/)  
+[Temporary File Management with Multiple Application Containers](/docs/temp-files/)  
 
-[Testing WordPress Core Development Versions](https://pantheon.io/docs/articles/wordpress/wordpress-development-versions/)  
+[Testing WordPress Core Development Versions](/docs/wordpress-development-versions/)  
 
-[Using Extensions That Assume Write Access](https://pantheon.io/docs/wordpress-development-versions/)  
+[Using Extensions That Assume Write Access](/docs/assuming-write-access/)  
 
-[Using PHP as an htaccess Alternative](https://pantheon.io/docs/htaccess/)  
+[Using PHP as an htaccess Alternative](/docs/htaccess/)  
