--- a/source/_docs/dns-providers/123-reg.md
+++ b/source/_docs/dns-providers/123-reg.md
@@ -13,8 +13,8 @@ Be sure that you have a:
 
 
 - Registered domain name using 123 Reg to host DNS
-- [Paid Pantheon plan](/docs/guides/going-live/plans/)
-- [Domain connected](/docs/guides/going-live/domains-https/) to the target Pantheon environment (typically Live)
+- [Paid Pantheon plan](/docs/guides/launch/plans/)
+- [Domain connected](/docs/guides/launch/domains/) to the target Pantheon environment (typically Live)
 
 ## Configure DNS Records on 123 Reg
 ### A Record
@@ -57,5 +57,5 @@ The TXT record is only required if you need to prove ownership of your domain in
 
 ## Next Steps
 
-* [Going Live: Domains & HTTPS](/docs/guides/going-live/domains-https/)
-* [Going Live: Redirect to a Primary Domain](/docs/guides/going-live/redirects/)
+* [Launch Essentials: Domains & HTTPS](/docs/guides/launch/domains/)
+* [Launch Essentials: Redirect to a Primary Domain](/docs/guides/launch/redirects/)
