Delete cloudflare https guide and replace links with dns provider doc

--- a/source/_changelogs/2015-04-01-April.md
+++ b/source/_changelogs/2015-04-01-April.md
@@ -31,7 +31,7 @@ We now have encryption for routing to appserver, so if you’re running HTTPS yo
 ### New Articles
 Learn how to use a quick PHP script to [Convert MySQL tables from MyISAM to InnoDB](/docs/myisam-to-innodb/).
 
-Want the security of SSL on your Pantheon site but the budget won't allow it? Check out [our new doc](/docs/guides/cloudflare-enable-https/) to learn how to set up and use Cloudflare SSL for free for on your WordPress site.
+Want the security of SSL on your Pantheon site but the budget won't allow it? Check out our new doc to learn how to set up and use Cloudflare SSL for free for on your WordPress site.
 
 ### New Guides
 Our [new guide](/docs/guides/collaborative-development/) will show you how to get up and running using a GitHub account to collaborate with your team. Learn how to synchronize your existing Pantheon site to GitHub, create repositories, synchronize existing GitHub repositories with Pantheon, and develop collaboratively by using branching and pull requests.
