Fixup june changelog, post pager, changelog partial

--- a/source/_changelogs/2017-06-01-June.md
+++ b/source/_changelogs/2017-06-01-June.md
@@ -5,7 +5,7 @@ changelog: true
 
 ## Platform Improvements
 ### Pantheon Upstream Configuration
-Organizations utilizing a [Custom Upstream](https://pantheon.io/docs/custom-upstream/) can now set default site configurations, such as [nested docroot](https://pantheon.io/docs/nested-docroot/), in the `pantheon.upstream.yml` file. For details, see [Pantheon YAML Configuration Files](https://pantheon.io/docs/pantheon-yml/).
+Organizations utilizing a [Custom Upstream](/docs/custom-upstream/) can now set default site configurations, such as [nested docroot](/docs/nested-docroot/), in the `pantheon.upstream.yml` file. For details, see [Pantheon YAML Configuration Files](/docs/pantheon-yml/).
 
 ### Default PHP Versions
 New [WordPress](https://github.com/pantheon-systems/WordPress/pull/123) and [Drupal 8](https://github.com/pantheon-systems/drops-8/pull/189) sites now run PHP 7 by default. [Drupal 7](https://github.com/pantheon-systems/drops-7/pull/107) sites will default to PHP 5.6.
@@ -13,19 +13,20 @@ New [WordPress](https://github.com/pantheon-systems/WordPress/pull/123) and [Dru
 ### Core Upgrades
 [Drupal 8.3.4](https://www.drupal.org/project/drupal/releases/8.3.4), [Drupal 7.56](https://www.drupal.org/project/drupal/releases/7.56), and [WordPress 4.8](https://wordpress.org/news/2017/06/evans/) have been pushed to all Site Dashboards.
 
+[Drupal 8.3.3 and above hooks into the Pantheon service provider](https://github.com/pantheon-systems/drops-8/pull/186), to support operations such as clearing Pantheon’s edge cache when Drupal cache is rebuilt.
+
 ### Terminus 1.4.0
-If you haven't updated in awhile, checkout the [Terminus Changelog](https://pantheon.io/docs/terminus/updates/#changelog) to see what's new and [update to the current release](https://pantheon.io/docs/terminus/updates/#update-to-the-current-release-)
+If you haven't updated in a while, check out the [Terminus Changelog](/docs/terminus/updates/#changelog) to see what's new and [update to the current release](/docs/terminus/updates/#update-to-the-current-release-)
 
 ### WP-CLI
 WordPress CLI on Pantheon has been updated to version 1.2.1. You can read the release notes for this update [here](https://make.wordpress.org/cli/2017/06/06/version-1-2-1-released/).
 
 ### New Relic
-New Relic's APM Availability Monitoring has [known incompatibilities](https://pantheon.io/docs/new-relic/#apm-availability-monitoring-alerts-and-false-positive-downtime-events) with SNI, which our [Free HTTPS](https://pantheon.io/docs/free-https/) uses. Instead, we recommend configuring the free availability monitoring service within New Relic’s Synthetics Lite tool. For details, see [New Relic APM Pro](https://pantheon.io/docs/new-relic/#configure-ping-monitors-for-availability).
+New Relic's APM Availability Monitoring has [known incompatibilities](/docs/new-relic/#apm-availability-monitoring-alerts-and-false-positive-downtime-events) with SNI, which our [Free HTTPS](/docs/free-https/) uses. Instead, we recommend configuring the free availability monitoring service within New Relic’s Synthetics Lite tool. For details, see [New Relic APM Pro](/docs/new-relic/#configure-ping-monitors-for-availability).
 
 ## Documentation
 
 ### New Articles
-[Automatically Test and Deploy GitHub Changes to Pantheon from an Existing Jenkins Server](https://pantheon.io/docs/guides/jenkins/)
+[Automatically Test and Deploy GitHub Changes to Pantheon from an Existing Jenkins Server](/docs/guides/jenkins/)
 
-[Launch Essentials](https://pantheon.io/docs/guides/launch/)
-
+[Launch Essentials](/docs/guides/launch/)
