Ignore stripped urls for htmlproofer

--- a/source/_changelogs/2017-06-01-June.md
+++ b/source/_changelogs/2017-06-01-June.md
@@ -16,7 +16,7 @@ New [WordPress](https://github.com/pantheon-systems/WordPress/pull/123) and [Dru
 [Drupal 8.3.3 and above hooks into the Pantheon service provider](https://github.com/pantheon-systems/drops-8/pull/186), to support operations such as clearing Pantheon’s edge cache when Drupal cache is rebuilt.
 
 ### Terminus 1.4.0
-If you haven't updated in a while, check out the [Terminus Changelog](/docs/terminus/updates/#changelog) to see what's new and [update to the current release](/docs/terminus/updates/#update-to-the-current-release-)
+If you haven't updated in a while, check out the <a data-proofer-ignore href="/docs/terminus/updates/#changelog">Terminus Changelog</a> to see what's new and <a data-proofer-ignore href="/docs/terminus/updates/#update-to-the-current-release-">update to the current release</a>.
 
 ### WP-CLI
 WordPress CLI on Pantheon has been updated to version 1.2.1. You can read the release notes for this update [here](https://make.wordpress.org/cli/2017/06/06/version-1-2-1-released/).
