Fixup links from free-https to https

--- a/source/_changelogs/2017-04-01-April.md
+++ b/source/_changelogs/2017-04-01-April.md
@@ -27,7 +27,7 @@ In some cases, ssh operations to the platform would hang on connection if a user
 
 [Deploy to Pantheon from an External Repository using DeployBot](https://pantheon.io/docs/deploybot/)
 
-[Early Access: Free and Automated HTTPS](https://pantheon.io/docs/free-https/)
+[Early Access: Free and Automated HTTPS](https://pantheon.io/docs/https/)
 
 [Require HTTPS with the HSTS Header](https://pantheon.io/docs/hsts/)
 
