--- a/source/_changelogs/2017-06-01-June.md
+++ b/source/_changelogs/2017-06-01-June.md
@@ -22,7 +22,7 @@ If you haven't updated in a while, check out the <a data-proofer-ignore href="/d
 WordPress CLI on Pantheon has been updated to version 1.2.1. You can read the release notes for this update [here](https://make.wordpress.org/cli/2017/06/06/version-1-2-1-released/).
 
 ### New Relic
-New Relic's APM Availability Monitoring has [known incompatibilities](/docs/new-relic/#apm-availability-monitoring-alerts-and-false-positive-downtime-events) with SNI, which our [Free HTTPS](/docs/free-https/) uses. Instead, we recommend configuring the free availability monitoring service within New Relic’s Synthetics Lite tool. For details, see [New Relic APM Pro](/docs/new-relic/#configure-ping-monitors-for-availability).
+New Relic's APM Availability Monitoring has [known incompatibilities](/docs/new-relic/#apm-availability-monitoring-alerts-and-false-positive-downtime-events) with SNI, which our [Free HTTPS](/docs/https/) uses. Instead, we recommend configuring the free availability monitoring service within New Relic’s Synthetics Lite tool. For details, see [New Relic APM Pro](/docs/new-relic/#configure-ping-monitors-for-availability).
 
 ## Documentation
 
