Finalize July changelog post

--- a/source/_changelogs/2017-07-01-July.md
+++ b/source/_changelogs/2017-07-01-July.md
@@ -4,7 +4,7 @@ changelog: true
 ---
 
 ## Global CDN
-The most advanced content delivery network for Drupal and WordPress is now integrated directly into Pantheon. All sites are now powered by our Global CDN thanks to a partnership with Fastly’s edge cloud platform—for free.
+The most advanced content delivery network for Drupal and WordPress is now integrated directly into Pantheon. We've partnered with Fastly to deliver traffic across their edge cloud platform, and we've integrated Let's Encrypt to provide HTTPS free to all sites on our platform. This means sites on Pantheon will run even faster, content will be delivered even closer to users, and HTTPS on Pantheon is now automatic and free—forever.
 
 ### [Free, Managed HTTPS](https://pantheon.io/features/managed-https)
 ### [Advanced Page Caching](https://pantheon.io/features/advanced-caching)
@@ -25,17 +25,22 @@ Although our analysis indicated our customers were not likely subject to this vu
 
 ### Drupal Core Upgrades
 [Drupal 8.3.5](https://www.drupal.org/project/drupal/releases/8.3.5) has been [pushed](https://github.com/pantheon-systems/drops-8/pull/190/commits/5736e0c6dde418547ed95f61ac6b479d7ae17146) to all Drupal Site Dashboards.
-## Documentation
 ### Global CDN Docs
+[HTTPS on Pantheon’s Global CDN](https://pantheon.io/docs/https/)
 
-[HTTPS on Pantheon’s Global CDN](/docs/https/)
+[Pantheon Global CDN](https://pantheon.io/docs/global-cdn/)
 
-[Pantheon Global CDN](/docs/global-cdn/)
+[Launch Essentials](https://pantheon.io/docs/guides/launch)
 
-[Launch Essentials](/docs/guides/launch)
+[Switching Sites from HTTP to Secure HTTPS](https://pantheon.io/docs/http-to-https/)
 
-[Switching Sites from HTTP to Secure HTTPS](/docs/http-to-https/)
+[Domains and Redirects](https://pantheon.io/docs/domains/)
 
-[Domains and Redirects](/docs/domains/)
+[Cloudflare Domain Configuration](https://pantheon.io/docs/cloudflare/)
 
-[Cloudflare Domain Configuration](/docs/cloudflare/)
+### New Articles
+[Incident Management Guide](https://pantheon.io/docs/guides/pagerduty/)
+
+[Integrate Trello on Pantheon with Quicksilver Hooks](https://pantheon.io/docs/guides/trello/)
+
+[Integrate Pivotal Tracker Project Management Application on Pantheon with Quicksilver Hooks](https://pantheon.io/docs/guides/pivotal-tracker/)
