Hotfix title case

--- a/source/_changelogs/2017-07-01-July.md
+++ b/source/_changelogs/2017-07-01-July.md
@@ -8,7 +8,7 @@ The most advanced content delivery network for Drupal and WordPress is now integ
 
 ### [Free, Managed HTTPS](https://pantheon.io/features/managed-https)
 ### [Advanced Page Caching](https://pantheon.io/features/advanced-caching)
-### [instant Performance Boost](https://pantheon.io/features/global-cdn)
+### [Instant Performance Boost](https://pantheon.io/features/global-cdn)
 ### [Upcoming Webinar](https://pantheon.io/resources/global-cdn-webinar)
 ## Platform Improvements
 ### Custom Upstreams: Self-serve GitHub and Bitbucket
