Hotfix documentation header

--- a/source/_changelogs/2017-07-01-July.md
+++ b/source/_changelogs/2017-07-01-July.md
@@ -38,6 +38,7 @@ Although our analysis indicated our customers were not likely subject to this vu
 
 [Cloudflare Domain Configuration](https://pantheon.io/docs/cloudflare/)
 
+## Documentation
 ### New Articles
 [Incident Management Guide](https://pantheon.io/docs/guides/pagerduty/)
 
