--- a/source/_changelogs/2017-04-01-April.md
+++ b/source/_changelogs/2017-04-01-April.md
@@ -23,7 +23,7 @@ In some cases, ssh operations to the platform would hang on connection if a user
 
 [Create a Drupal 8 Site From the Command Line Using Terminus and Drush](https://pantheon.io/docs/guides/drupal8-commandline/)
 
-[Using GitHub Pull Requests with Composer and Drupal 8](https://pantheon.io/docs/guides/github-pull-requests/)
+[Build Tools Guide](https://pantheon.io/docs/guides/build-tools/)
 
 [Deploy to Pantheon from an External Repository using DeployBot](https://pantheon.io/docs/deploybot/)
 
@@ -32,4 +32,3 @@ In some cases, ssh operations to the platform would hang on connection if a user
 [Require HTTPS with the HSTS Header](https://pantheon.io/docs/hsts/)
 
 [Pingdom Uptime Check](https://pantheon.io/docs/guides/pingdom-uptime-check/)
-
