--- a/source/_changelogs/2016-07-01-July.md
+++ b/source/_changelogs/2016-07-01-July.md
@@ -20,4 +20,4 @@ If you haven't updated in a while, check out the [Terminus Changelog](https://gi
 ## Documentation
 
 ### New Articles
-[Using Drupal 8 and Composer](https://pantheon.io/docs/composer-drupal-8/)
+[Using Drupal 8 and Composer](https://pantheon.io/docs/composer/)
