--- a/source/_changelogs/2017-08-01-August.md
+++ b/source/_changelogs/2017-08-01-August.md
@@ -5,19 +5,20 @@ changelog: true
 
 ## Platform Improvements
 ### Global CDN Surrogate Key Cache Clearing API Improvement 
-We improved cache clearing behavior for a large number of surrogate keys or cache tags. The fix was made internally by Pantheon and no action required if you are already running WordPress or Drupal versions of Pantheon Advanced Page Cache.
+We improved cache clearing behavior for a large number of surrogate keys or cache tags. The fix was made internally by Pantheon and no action is required if you are already running WordPress or Drupal versions of Pantheon Advanced Page Cache.
 
 ### Terminus 1.5
 If you haven't updated Terminus recently, checkout the [Terminus Changelog](https://pantheon.io/docs/terminus/updates/#changelog) to see what's new and update to the [current release](https://pantheon.io/docs/terminus/updates/#update-to-the-current-release-)
 
 ### PHP Upgrades
-We upgraded PHP to [5.6.31](http://www.php.net/ChangeLog-5.php#5.6.31) and [7.0.23](http://www.php.net/ChangeLog-7.php#7.0.23). See our documentation to learn how to [upgrade your PHP version](https://pantheon.io/docs/php-versions/). [Drupal 7 site may require action](https://status.pantheon.io/incidents/v81md6cd43b8).
+We upgraded PHP to [5.6.31](http://www.php.net/ChangeLog-5.php#5.6.31) and [7.0.23](http://www.php.net/ChangeLog-7.php#7.0.23). See our documentation to learn how to [upgrade your PHP version](https://pantheon.io/docs/php-versions/). [Drupal 7 sites may require action](https://status.pantheon.io/incidents/v81md6cd43b8).
 
 ### Drupal Core Upgrades
-[Drupal 8.3.7](https://www.drupal.org/project/drupal/releases/8.3.7) has been [pushed](https://github.com/pantheon-systems/drops-8/pull/193) to all Drupal 8 Site Dashboards. 
+[Drupal 8.3.7](https://www.drupal.org/project/drupal/releases/8.3.7) has been [pushed](https://github.com/pantheon-systems/drops-8/pull/193) to all Drupal 8 site dashboards.
 
 ### WordPress Core Upgrades
-[WordPress 4.8.1](https://codex.wordpress.org/Version_4.8.1) has been [pushed](https://github.com/pantheon-systems/WordPress/pull/130) to all WordPress Site Dashboards
+[WordPress 4.8.1](https://codex.wordpress.org/Version_4.8.1) has been [pushed](https://github.com/pantheon-systems/WordPress/pull/130) to all WordPress site dashboards
+
 
 ## Documentation
 
