underp derpy link

--- a/source/_changelogs/2017-08-01-August.md
+++ b/source/_changelogs/2017-08-01-August.md
@@ -5,7 +5,7 @@ changelog: true
 
 ## Platform Improvements
 ### Global CDN Surrogate Key Cache Clearing API Improvement 
-We improved cache clearing behavior for a large number of surrogate keys or cache tags. The fix was made internally by Pantheon and no action is required if you are already running WordPress or Drupal versions of Pantheon Advanced Page Cache. See the  Pantheon Advanced Page Cache for [WordPress](https://github.com/pantheon-systems/documentation/pull/2863/files#r137361525) and [Drupal](https://www.drupal.org/project/pantheon_advanced_page_cache) pages for more information.
+We improved cache clearing behavior for a large number of surrogate keys or cache tags. The fix was made internally by Pantheon and no action is required if you are already running WordPress or Drupal versions of Pantheon Advanced Page Cache. See the  Pantheon Advanced Page Cache for [WordPress](https://wordpress.org/plugins/pantheon-advanced-page-cache/) and [Drupal](https://www.drupal.org/project/pantheon_advanced_page_cache) pages for more information.
 
 ### Terminus 1.5
 If you haven't updated Terminus recently, checkout the [Terminus Changelog](https://pantheon.io/docs/terminus/updates/#changelog) to see what's new and update to the [current release](https://pantheon.io/docs/terminus/updates/#update-to-the-current-release-)
