--- a/source/_changelogs/2017-10-01-October.md
+++ b/source/_changelogs/2017-10-01-October.md
@@ -6,22 +6,24 @@ changelog: true
 ## Platform Improvements
 
 ### Custom Upstreams
-We’ve opened access to Custom Upstreams for all organizations on Pantheon. Read more about it on our [blog](https://pantheon.io/blog/announcing-new-pantheon-upstream-workflow), or [give it a try](/docs/custom-upstream/).
+We’ve opened access to Custom Upstreams for all organizations on Pantheon. Read more about it on our [blog](https://pantheon.io/blog/announcing-new-pantheon-upstream-workflow){.external}, or [give it a try](/docs/custom-upstream/).
 
 ### Terminus 1.6
-If you haven’t updated Terminus recently, check out the [Terminus Changelog](/docs/terminus/updates/#changelog) to see what’s new and update to the [current release](/docs/terminus/updates/#update-to-the-current-release-).
+If you haven’t updated Terminus recently, check out the <a href="/docs/terminus/updates#changelog" data-proofer-ignore>Terminus Changelog</a> to see what’s new and update to the <a href="/docs/terminus/updates#update-to-the-current-release-" data-proofer-ignore>current release</a>.
 
 ### WebP Image Support
-[WebP](https://developers.google.com/speed/webp/), a new image format created by Google, is now supported by Pantheon’s Global CDN.
+[WebP](https://developers.google.com/speed/webp/){.external}, a new image format created by Google, is now supported by Pantheon’s Global CDN.
 
 ### PHP 7.1 & IonCube Decoder
-We’ve made [PHP 7.1](http://www.php.net/ChangeLog-7.php#7.1.0) available for all sites.  See our documentation to learn how to [upgrade your PHP version](/docs/php-versions/), or learn more in [this blog post](https://pantheon.io/blog/php-71-ioncube-decoder-now-available-all-sites-pantheon).
+We’ve made [PHP 7.1](http://www.php.net/ChangeLog-7.php#7.1.0){.external} available for all sites.  See our documentation to learn how to [upgrade your PHP version](/docs/php-versions/), or learn more in [this blog post](https://pantheon.io/blog/php-71-ioncube-decoder-now-available-all-sites-pantheon){.external}.
 
 ### WordPress Core Upgrades
-[WordPress 4.8.3](https://codex.wordpress.org/Version_4.8.3) has been [pushed](https://github.com/pantheon-systems/WordPress/pull/139) to all WordPress site dashboards. This release is classified as a critical [security release](https://status.pantheon.io/incidents/gd6ls2q28j2h), and we encourage all sites to upgrade immediately.
+[WordPress 4.8.3](https://codex.wordpress.org/Version_4.8.3){.external} has been [pushed](https://github.com/pantheon-systems/WordPress/pull/139){.external} to all WordPress site dashboards. This release is classified as a critical [security release](https://status.pantheon.io/incidents/gd6ls2q28j2h){.external}, and we encourage all sites to upgrade immediately.
 
 
 ## Documentation
-
-[Using Git with SFTP & WordPress](/docs/guides/wordpress-git/)
+<a href="/docs/guides/wordpress-git/">
+  <img alt="WordPress Development" src="/source/docs/assets/images/git-sftp-wp-docs-guide.png" style="max-height:200px;" class="main-topic-info__plugin-image" >
+</a>
+### [Using Git with SFTP & WordPress](/docs/guides/wordpress-git/)
 Learn how to use the WordPress dashboard, an SFTP client, and your text editor of choice to work quickly, safely and easily on Pantheon's Git-based platform.
