Consolidate guided migration docs 5 => 1
Restore ul intro

Fix relative links

Fix tabs

Tweak header

--- a/source/_changelogs/2016-08-01-August.md
+++ b/source/_changelogs/2016-08-01-August.md
@@ -30,6 +30,7 @@ The latest release has huge performance improvements for users with lots of site
 ### New Articles/Guides
 
 [Migrating Sites to Pantheon: Preserve Existing Git History](/docs/migrate-manual#import-with-git/)
-[Serving Sites from the Web Subdirectory](https://pantheon.io/docs/nested-docroot/)
-[Using Lockr to Secure and Manage API and Encryption Keys](/docs/guides/lockr/)
+[Migrating Sites to Pantheon: Preserve Existing Git History](/docs/migrate-preserve-history/)    
+[Serving Sites from the Web Subdirectory](https://pantheon.io/docs/nested-docroot/)  
+[Using Lockr to Secure and Manage API and Encryption Keys](/docs/guides/lockr/)  
 [Using Priority Enterprise Support](/docs/priority-enterprise-support/)
