--- a/source/_changelogs/2017-11-01-November.md
+++ b/source/_changelogs/2017-11-01-November.md
@@ -20,7 +20,7 @@ On newly created sites, you are now directed to install your WordPress or Drupal
 
 ## Documentation
 
-[How Pantheon Prevents Plan Abuse](/docs/preventing-plan-abuse/)
+[Pageview Limits and Overages](/docs/pageview-limits/)
 
 Information on how Pantheon measures site traffic to prevent plan abuse.
 
