move prefix data, link updates

--- a/source/_changelogs/2015-08-01-August.md
+++ b/source/_changelogs/2015-08-01-August.md
@@ -3,7 +3,7 @@ title: August 2015
 changelog: true
 ---
 ## Platform Improvements
-### PHP 5.5 opcache revalidate-freq Value is Now Set to Zero   
+### PHP 5.5 opcache revalidate-freq Value is Now Set to Zero
 Previously, for sites on PHP 5.5 (WordPress sites default, Drupal sites can [upgrade now](/docs/php-versions/)), code changes were only refreshed every 60 seconds, regardless of the environment. Now, Dev/Multidev environments on 5.5 will immediately see code changes, and Test/Live now refresh every 2 seconds.
 
 ### PHP Default Arg Separator
@@ -23,10 +23,10 @@ If you use [Jetpack’s Photon](https://jetpack.com/support/photon/) tool, the P
 ## Documentation
 
 ### New Articles
-[Dynamic Outgoing IP Addresses](/docs/outgoing-ips/)  
-[Export an Existing Drupal Site](/docs/drupal-export/)  
-[Export an Existing WordPress Site](/docs/wordpress-export/)  
-[Identify and Kill Queries with MySQL Command-Line Tool](/docs/kill-mysql-queries/)  
-[Managing Drupal and WordPress Subsites Under a Single Domain](/docs/single-application-sites/)  
-[Migrate Sites to Pantheon](/docs/migrate/)   
-[Parse nginx Access with GoAccess](/docs/nginx-access-log/)  
+[Dynamic Outgoing IP Addresses](/docs/outgoing-ips/)
+[Export an Existing Drupal Site](/docs/migrate-manual/)
+[Export an Existing WordPress Site](/docs/migrate-manual/)
+[Identify and Kill Queries with MySQL Command-Line Tool](/docs/kill-mysql-queries/)
+[Managing Drupal and WordPress Subsites Under a Single Domain](/docs/single-application-sites/)
+[Migrate Sites to Pantheon](/docs/migrate/)
+[Parse nginx Access with GoAccess](/docs/nginx-access-log/)
