Fix broken links throughout

--- a/source/_changelogs/2017-11-01-November.md
+++ b/source/_changelogs/2017-11-01-November.md
@@ -16,7 +16,7 @@ On newly created sites, you are now directed to install your WordPress or Drupal
 [Drupal 8.4.2](https://www.drupal.org/project/drupal/releases/8.4.2){.external} has been [pushed](https://github.com/pantheon-systems/drops-8/pull/196){.external} to all Drupal 8 site dashboards.
 
 ### WordPress Core Upgrades
-[WordPress 4.9.1](https://codex.wordpress.org/Version_4.9.1){.external} has been [pushed](https://github.com/pantheon-systems/WordPress/pull/144){.external} to all WordPress site dashboards. This is a [security release](https://status.pantheon.io/incidents/ml7yn6xj8ffl){.external}, and we suggest everyone [upgrade immediately](/docs/upstream-updates/).
+[WordPress 4.9.1](https://codex.wordpress.org/Version_4.9.1){.external} has been [pushed](https://github.com/pantheon-systems/WordPress/pull/144){.external} to all WordPress site dashboards. This is a [security release](https://status.pantheon.io/incidents/ml7yn6xj8ffl){.external}, and we suggest everyone [upgrade immediately](/docs/core-updates/).
 
 ## Documentation
 
